# Crystal.Live.2

./: .gitignore  .prettierignore  CMakeLists.txt  CMakePresets.json  Crystal.Live.2.code-workspace  Notes.md  Readme.md  Release Notes.md  clear.bat
.tours/: crystallive-2-.tour
cmake/: AddPrecompileHeader.cmake  CreatePDB.cmake  units.cmake
cmake/env/: FindAudio.cmake  FindBoost.cmake  FindCodec.cmake  FindCommon.cmake  FindConfig.cmake  FindFFMPEG.cmake  FindLibSRTP.cmake  FindLibhv.cmake  FindNetCapture.cmake  FindPJSIP.cmake  FindPcap.cmake  FindQT6.cmake  FindRabbitMQ.cmake  FindRecordEngine.cmake  Findexosip.cmake  Git.cmake  VisualStudio.cmake  build_info.cmake  compiler.cmake  config.h  environment.cmake  policy.cmake
cmake/increment/: build_count.bat  build_count.cmake  build_count.sh
doc/: CQlive数字化平台.docx
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/AppLaunch/: AppLaunch_en_US.ts  AppLaunch_zh_CN.qm  AppLaunch_zh_CN.ts  CMakeLists.txt  denoise.c  denoise.h  main.cpp
src/app/AppLaunch/res/: AppLaunch.rc  AppLaunch.rc.in  version.h  version.h.in
src/app/RecordService/: CMakeLists.txt  RecordService_en_US.ts  RecordService_zh_CN.qm  RecordService_zh_CN.ts
src/app/RecordService/include/: CRecordService.h  RecordService.h
src/app/RecordService/platform/windows/: Service_installer.cpp  Service_installer.h  copy_disabler.h  service_base.cpp  service_base.h
src/app/RecordService/res/: RecordService.qrc  RecordService.rc  version.h
src/app/RecordService/src/: CRecordService.cpp  RecordService.cpp
src/app/Simulator/: CMakeLists.txt  Simulator_en_US.ts  Simulator_zh_CN.ts
src/app/Simulator/res/: Simulator.rc  version.h
src/app/Simulator/src/: CMakeLists.txt  CSipServiceThreadWrapper.cpp  CSipServiceThreadWrapper.h  CSipUdpClientThreadWrapper.cpp  CSipUdpClientThreadWrapper.h  MyCppClass.cpp  MyCppClass.h  Simulator_en_US.qm  Simulator_en_US.ts  Simulator_zh_CN.qm  Simulator_zh_CN.ts  main.cpp  main.qml  pch.h
src/version/: MinDepVersions.cmake  VersionManage.cmake
